# keypop

./: .SRCINFO  .gitignore  HYPRLAND.md  Makefile  PKGBUILD  keypop  meson.build  readme.md  showmethekey
docs/: AUR_SUBMISSION.md
src/: buffer.c  buffer.h  draw.c  draw.h  input.c  input.h  keys.c  keys.h  main.c  shm.c  shm.h  state.h  tray.c  tray.h  window.c  window.h  wl_setup.c  wl_setup.h
